--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,8 @@
   <%= csrf_meta_tags %>
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_include_tag 'application'%>
+ 
+<%= javascript_include_tag 'application', 'Chart.bundle', 'chartkick', 'data-turbolinks-track': 'reload' %>
   
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
@@ -21,3 +22,4 @@
 </body>
 
 </html>
+
